--- a/math/rudin/1/notes.tex
+++ b/math/rudin/1/notes.tex
@@ -81,16 +81,18 @@ The number $\sqrt{2}$ is irational.
 \end{proof}
 
 \begin{rem}
-There is a decent bit to be said about how Rudin went about choosing the formula used to demonstrate that the sets of rationals with $p^2 \ < \ 2$ and $p^2 \ > \ 2$ have no greatest and smallest element. However, I'll probably circle back and fill this section in when I have two to draw some graphs to really build visual intuition.
+  There is a decent bit to be said about how Rudin went about choosing the formula used to demonstrate that the sets of rationals with
+  $p^2 < 2$ and $p^2 > 2$ have no greatest and smallest element. However, I'll probably circle back and fill this section in when
+  I have two to draw some graphs to really build visual intuition.
 \end{rem}
 
-\section{The Real Field}
+\subsection{The Real Field}
 
 \begin{thm}
-	If $x, \ y \ \in \ \mathbb{R}$, and $x \ > \ 0$, then there is a positive integer 
+	If $x, \ y \in \mathbb{R}$, and $x > 0$, then there is a positive integer 
 	$n$ such that:
 
-	$$nx \ > \ y$$
+	$$nx > y$$
 \end{thm}
 
 \begin{rem}
@@ -100,13 +102,83 @@ There is a decent bit to be said about how Rudin went about choosing the formula
 \end{rem}
 
 \begin{proof}
-	Assume that there existed some pair $(x, \ y)$ such that there existed no positive 
-	integer $n$ such that $nx \ > \ y$. It follows that for any integer $n$:
+	Assume that there existed some pair $(x, y)$ such that there existed no positive 
+	integer $n$ such that $nx > y$. It follows that for any integer $n$:
 
-	$$nx \ < \ y$$
+	$$nx \ \leq \ y$$
 
-	It follows that $y$ is an upper bound of the set of all $nx$, for integer $n$.  
+	It follows that $y$ is an upper bound of the set of all $nx$, for integer $n$. By definition of $\mathbb{R}$,
+  this set has a least upper bound. Let $m$ be this least-upper bound:
+
+  $$nx \ \leq \ m$$
+
+  Consider the number $m - x$. There must be some $nx > m - x$, or else $m - x$ would be a lower upper
+  bound than $m$ oon the set of all $nx$. It follows that $(n + 1)x > m$. Since $n + 1$ is an integer, this
+  is a contradiction. Thus, no such $m$ exists. It follows that there must exist some $n$ such that $nx > y$, for the
+  pair $x$ and $y$.
 \end{proof}
 
+\begin{thm}
+  If $x \in \mathbb{R}$ and $y \in \mathbb{R}$, and $x < y$, then there exists a $p \in \mathbb{Q}$ such that $x < p < y$.
+\end{thm}
+
+\begin{rem}
+  This proof seemed significantly more difficult than the previous one, so I will simply be making remarks on Rudin's proof rather than attempt it myself.
+  The general idea behind this proof is that we wish to scale both $x$ and $y$ by some integer $n$, until they are far enough apart such that there is an integer $m$ between
+  them. Dividing by $n$ then gives $m/n$ between $x$ and $y$.
+  \newline\newline
+  The real question is how we go about finding an $n$ that allows for this. Well, since $x  - y > 0$, we can choose some $n$ such that
+  $n(x - y) > 1$. If $x - y > 1$, then $n$ can just be one and if $1 > x - y$, then we apply the previous theorem. Conceptually, it makes
+  sense that we should be able to find an integer $m$ in this range. If we're given a number line and mark two points that are separated by a distance greater than $1$,
+  that interval should overlap with an integer.
+  \newline\newline
+  To find this integer, We make use of the fact that there is some $m_1 > nx$ (by the previous theorem). Similarly, we can prove there is an integer below $nx$ by noting that
+  there is some $m_2 > -nx \ \Rightarrow \ -m_2 < nx$. Since $nx$ is located between two integers, it follows that it must be between two succesive integers, $m$ and $m - 1$.
+  \newline\newline
+  Now, we just need to show that $m < ny$. This follows from the fact that the distance between $nx$ and $ny$ is greater than $1$:
+
+  $$nx < m < nx + 1 < ny$$
+
+  So there is an $m$ between $nx$ and $ny$. It follows that:
+
+  $$x < \frac{m}{n} < y$$
+\end{rem}
+
+\begin{rem}
+	For the moment, we will not discuss the "power-uniqueness" proof.
+\end{rem}
+
+\section{Basic "Topology"}
+
+\textit{The reason I put topology in quotes is because we are technically only studying topology on the real line and 
+products of the real line.}
+
+\subsection{Finite and Infinite Sets}
+
+\begin{thm}
+	Every infinite subset of a countable set is countable.
+\end{thm}
+
+\begin{rem}
+	Rudin presents a non-rigorous version of the proof of this fact. The "adult" version requires the well-ordering principle
+	of the integers and the principle of recursive definition.
+\end{rem}
+
+\begin{thm}
+	A set is open if and only if its complement is closed.
+\end{thm}
+
+\begin{proof}
+	Consider the set $U$ in $X$. Let $U$ be open. It follows that for each $x \ \in \ U$, there exists some $N_r(x)$ such that 
+	$x \ \in \ N_r(x) \ \subset \ U$. Consider the complement of $U$, which we denote by $X \ - \ U$. Assume that there is a 
+	limit point $y$ of $X \ - \ U$ that is in $U$. Thus, there must exist some neighbourhood around $x$ that is contained in 
+	$U$, which contradicts the fact that $y$ is a limit point. Thus, $X \ - \ U$ must contain all of its limit points and 
+	is closed.
+	\newline\newline
+	Conversely, assume $X \ - \ U$ is closed, and thus contains all of its limit points. Assume there is some $x \ \in \ U$ 
+	that is contained in no neighbourhood that is a subset of $U$. It follows that each neighbourhood of $x$ interssects 
+	$X \ - \ U$, making it a limit point. This is a contradiction, so each point of $U$ must be an interior point, making 
+	$U$ open.
+\end{proof}
 
 \end{document}
