--- a/math/rudin/1/notes.tex
+++ b/math/rudin/1/notes.tex
@@ -181,4 +181,14 @@ products of the real line.}
 	$U$ open.
 \end{proof}
 
+\begin{thm}
+	Every $k$-cell is compact.
+\end{thm}
+
+\begin{rem}
+	To my understanding, the goal behind this proof is to show that if we have a $k$-cell, and we attempt to break 
+	up the $k$-cell into many smaller $k$-cells, we will eventually reach a point where one of the fragments has to 
+	be contained in a set of the open cover.
+\end{rem}
+
 \end{document}
