--- a/math/putnam/advanced1.tex
+++ b/math/putnam/advanced1.tex
@@ -100,6 +100,43 @@
       $$P_{n + 1}(1) = (-1) (n + 1) k P_n(1) = (-1) (n + 1)k (-1)^n k^n n! = (-1)^{n + 1} k^{n + 1} (n + 1)!$$
 
       Thus, we have proved this statement by induction.
-      \end{proof}
+    \end{proof}
+
+    \begin{prop}
+      There are $2010$ boxes labeled $B_{1}, \ B_{2}, \ . . . , \ B_{2010}$, and $2010n$ balls have been
+      distributed among them, for some positive integer $n$. You may redistribute the balls
+      by a sequence of moves, each of which consists of choosing an $i$ and moving exactly $i$
+      balls from box $B_i$
+      into any one other box. For which values of n is it possible to reach
+      the distribution with exactly n balls in each box, regardless of the initial distribution
+      of balls?
+    \end{prop}
+
+    \begin{prop}
+      For $n \leq 1004$, it is not possible to redistribute the balls, while for $n \geq 1004$, it is possible.
+    \end{prop}
+
+    \begin{lem}
+      Any sequence of moves that move balls from one set to another is equivalent to moving balls exclusively from $B_k \ \rightarrow \ B_1$ and from
+      $B_1 \ \rightarrow \ B_j$.
+    \end{lem}
+
+    \begin{proof}
+      Consider some ``move'' that takes $k$ balls from $B_k$ and moves them to $B_j$. We can reformulate this as moving $k$ balls to $B_k$, and
+      then moving $1$ ball from $B_1$ to $B_j$, $k$ times.
+    \end{proof}
+
+    Consider the case where there are $2009$ balls in $B_{2010}$, $2008$ in $B_{2009}$, and so on, for all $B_i$. There is no possible way to distribute these
+    balls, so that there is an equal number in each bin. Notice that taking balls out of any bin will also result in a configuration where it is notpossible to redistribute the
+    balls in an equal way. The number of balls in this configuration is:
+
+    $$\frac{(2009)(2010)}{2} = (2010)(1004.5)$$
+
+    so it follows that for $n \leq 1004$ (and thus the number of balls less thanor equal to $(2010)(1004)$), we can find a distribution such that the ball cannot be redistributed
+    equally.
+    \newline
+
+    Now, consider $n \geq 1005$. It follows that there are $(2010)(1005)$ balls total. Thus, there must exist some $B_i$ with at least $1005$ balls.
+
 
     \end{document}
